--- a/lasagna.html
+++ b/lasagna.html
@@ -7,6 +7,7 @@
     <title>Lasagna</title>
   </head>
   <body>
+    <a href="./index.html">Recipes</a>
     <h1>Lasagna</h1>
 
     <img src="./images/lasagna.jpeg" />
