Edit chicken.html add chicken.jpeg

--- a/chicken.html
+++ b/chicken.html
@@ -7,18 +7,39 @@
     <title>Lasagna</title>
   </head>
   <body>
-    <h1>Lasagna</h1>
+    <h1>BBQ Chicken</h1>
+    <p>
+      Nice crispy chicken, with tangy taste. It is best if bone-in chicken
+      pieces used.
+    </p>
 
-    <img src="./images/lasagna.jpeg" />
+    <img src="./images/chicken.jpeg" />
 
-    <h3></h3>
+    <h3>Ingredients</h3>
     <ul>
-      <li></li>
+      <li>3 tablespoons vegetable oil</li>
+      <li>1 ½ cups cider vinegar</li>
+      <li>1 tablespoon salt</li>
+      <li>¼ teaspoon ground black pepper</li>
+      <li>2 teaspoons poultry seasoning</li>
+      <li>2 pounds cut up chicken pieces</li>
     </ul>
 
-    <h3></h3>
+    <h3>Steps</h3>
     <ol>
-      <li></li>
+      <li>Heat grill to medium heat.</li>
+      <li>
+        In a small skillet combine the oil, vinegar, salt and pepper and put
+        over low heat. Add the poultry seasoning while stirring constantly; when
+        sauce mixes well and starts to bubble, it is done.
+      </li>
+      <li>
+        Place chicken on hot grill and brush with sauce. Grill for 45 to 60
+        minutes, turning every 5 to 10 minutes, and brush chicken with sauce
+        after each turning. Grill until chicken is done and juices run clear.
+        (Note: Be sure to keep an eye on the chicken as it cooks, as it tends to
+        have flair ups due to the oil and chicken drippings!)
+      </li>
     </ol>
   </body>
 </html>
