Edit spinach.html, add spinach.jpeg

--- a/spinach.html
+++ b/spinach.html
@@ -7,18 +7,36 @@
     <title>Lasagna</title>
   </head>
   <body>
-    <h1>Lasagna</h1>
+    <h1>Wilted Spinach</h1>
 
-    <img src="./images/lasagna.jpeg" />
+    <img src="./images/spinach.jpeg" />
 
-    <h3></h3>
+    <h3>Ingredients</h3>
     <ul>
-      <li></li>
+      <li>¼ cup extra virgin olive oil</li>
+      <li>2 tablespoons balsamic vinegar</li>
+      <li>1 teaspoon lemon juice</li>
+      <li>1 tablespoon bottled minced garlic</li>
+      <li>1 pinch sea salt</li>
+      <li>1 pinch ground black pepper</li>
+      <li>4 ounces baby spinach</li>
+      <li>1 ½ tablespoons pine nuts</li>
     </ul>
 
-    <h3></h3>
+    <h3>Steps</h3>
     <ol>
-      <li></li>
+      <li>
+        In a bowl, mix the olive oil, vinegar, lemon juice, garlic, salt, and
+        pepper.
+      </li>
+      <li>
+        Place the spinach over boiling water in a pot fitted with a steamer
+        basket, and steam 2 to 3 minutes, until wilted but not soggy.
+      </li>
+      <li>
+        Toss spinach in a bowl with the dressing, and sprinkle with pine nuts to
+        serve.
+      </li>
     </ol>
   </body>
 </html>
