--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <a href="lasagna.html">Lasagna</a>
+    <ul>
+      <li><a href="lasagna.html">Lasagna</a></li>
+      <li><a href="chicken.html">BBQ Chicken</a></li>
+      <li><a href="spinach.html">Wilted Spinach</a></li>
+    </ul>
   </body>
 </html>
