Add home links and title to chicken.html, spinach.html

--- a/spinach.html
+++ b/spinach.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lasagna</title>
+    <title>Wilted Spinach</title>
   </head>
   <body>
+    <a href="./index.html">Recipes</a>
     <h1>Wilted Spinach</h1>
 
     <img src="./images/spinach.jpeg" />
