--- a/chicken.html
+++ b/chicken.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lasagna</title>
+    <title>BBQ Chicken</title>
   </head>
   <body>
+    <a href="./index.html">Recipes</a>
     <h1>BBQ Chicken</h1>
     <p>
       Nice crispy chicken, with tangy taste. It is best if bone-in chicken
