--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="./styles.css" />
+    <title>Odin Recipes</title>
   </head>
   <body>
-    <h1>Odin Recipes</h1>
-    <ul>
+    <h1 class="home">Odin Recipes</h1>
+    <ul class="home">
       <li><a href="lasagna.html">Lasagna</a></li>
       <li><a href="chicken.html">BBQ Chicken</a></li>
       <li><a href="spinach.html">Wilted Spinach</a></li>
